cabal-version:      2.4
name:               flowy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Olli Kortelahti
maintainer:         okortelahti@gmail.com

extra-source-files: CHANGELOG.md

executable flowy
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , async
                    , algebraic-graphs
                    , containers
                    , mtl
                    , servant-server
                    , aeson
                    , warp
                    , stm

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall
